--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
             <div class="sub-heading3">
                 <p>Click the "X" to remove the item from your list.</p>
             </div>
-            <!-- <div class="sub-heading4">
-                <input type="text" id="searchBar" placeholder="Search Item..">
-            </div> -->
+            <div class="sub-heading4">
+                <input type="text" id="searchBar" placeholder="Search Item.." onkeyup="filter()">
+            </div>
 
         </div>
         <div class="input-div">
